css/style.css
@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;400;700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;700&display=swap");

:root {
  --bg-color: rgb(66, 66, 238);
  --with-container: 1200px;
  --with-big-screen-container: 2000px;
  --dark-color: #000;
  --white-color: #fff;
  --light-gray-color: #777;
  --bright-color: rgb(209, 209, 52);
  --blue-color: rgb(14, 14, 90);
}

/* Basic style*/
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: "Raleway", sans-serif;
  line-height: 1.4;
  color: var(--dark-color);
  overflow-x: hidden;
}

.container {
  max-width: var(--with-container);
  margin: 0 auto;
  padding: 0 2rem;
  overflow: hidden;
}

a {
  text-decoration: none;
}

img {
  display: block;
  max-width: 100%;
}

ul,
li {
  list-style: none;
}

/* utility classes */
.text-center {
  text-align: center;
}

.section-title {
  font-size: 3rem;
  font-weight: 700;
  padding: 2rem 0;
  color: var(--blue-color);
}

.highlight {
  font-weight: 700;
  color: var(--blue-color);
}

.line {
  width: 100%;
  border: 2px solid var(--white-color);
  display: block;
  margin: 1rem 0;
}

/* Button styles */
.btn {
  display: inline-block;
  padding: 0.5rem 1rem;
  border: 0;
  border-radius: 5px;
  margin: 0 0.3rem 0.3rem 0;
  transition: background-color, color, 0.5s ease-in-out;
}

.btn:hover {
  background: var(--bright-color);
  color: var(--dark-color);
}

.btn-light {
  background: var(--bg-color);
  color: var(--dark-color);
}

.btn-dark {
  background: var(--dark-color);
  color: var(--white-color);
}

/* navbar */

.navbar .container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
}

.navbar ul {
  text-transform: uppercase;
}

.navbar .nav {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  margin-top: 3rem;
}

.navbar li {
  margin-bottom: 1.5rem;
}

#logo {
  width: 50px;
  height: 50px;
  margin-bottom: 0.5rem;
}

.navbar a {
  color: #ccc;
  padding-bottom: 0.3rem;
  border-bottom: 3px solid transparent;
  transition: color, border-color 0.3s ease-out;
  font-weight: 700;
}

.navbar a:hover {
  color: var(--white-color);
  border-color: var(--bright-color);
}

/* HEADER */

.header-home h1,
.header-home h2 {
  font-weight: 200;
  margin: 0.4rem;
}

.header-home h1 {
  font-size: 1.7rem;
}

.header-home h2 {
  font-size: 1.3rem;
  margin-bottom: 4rem;
}

/* Main Image */
.header-home {
  background: url(../img/dublin-dock.jpg) no-repeat center center/cover;
  background-color: rgba(14, 14, 90, 0.6);
  background-blend-mode: overlay;
  color: var(--white-color);
  height: 100vh;
}

.header-home h2 {
  font-size: 1.5rem;
  color: var(--white-color);
}

.main-img {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100%;
  padding: 0 2rem;
}

/* Cursor */
.txt-type > span {
  position: relative;
}

.txt-type > span::after {
  content: "";
  right: -0.5rem;
  width: 1px;
  height: 100%;
  position: absolute;
  border-right: 0.2rem solid var(--white-color);
  animation: blink 0.5s 1s infinite ease;
}

@keyframes blink {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

/* About */
#about {
  padding: 2rem 1.5rem 6rem;
  background: linear-gradient(45deg, var(--bg-color), var(--white-color));
  color: var(--dark-color);
  clip-path: polygon(0 0, 100% 0, 100% 97%, 0 100%);
}

#about .container {
  display: grid;
  grid-template-columns: 1fr;
}

.about-text {
  margin: 1rem 0;
  font-weight: 100;
  font-family: "Roboto Condensed", sans-serif;
  letter-spacing: 1px;
  max-width: 600px;
  margin: 0 auto;
  line-height: 1.6;
  text-align: left;
}

.resume {
  font-weight: 700;
  background: var(--white-color);
  margin: 2rem 0;
}

.resume:hover {
  background: var(--bright-color);
  color: var(--bg-color);
}

.img-container {
  overflow: hidden;
}

.me {
  margin: 2.5rem 0;
  transition: scale, brightness, 0.5s ease-in-out;
  cursor: pointer;
}

.me:hover,
.me:active {
  transform: scale(1.2);
  filter: brightness(85%);
}

/* bar skills */

.skills {
  margin: 1rem 0;
  width: 100%;
  color: var(--white-color);
}

.skills li {
  margin: 1rem 0;
}

.skills img {
  padding: 0.5rem 0 1rem;
  width: 2rem;
  margin: 0 auto;
}

.heading-skills {
  margin-bottom: 1.5rem;
  color: var(--blue-color);
}

.bar {
  background: var(--blue-color);
  display: block;
  height: 0.5rem;
  border: 1px solid rgba(0, 0, 0, 0.3);
  border-radius: 3px;
  overflow: hidden;
  box-shadow: 0 0 10px var(--bg-color);
}

.bar span {
  height: 0.5rem;
  background: var(--bright-color);
  display: flex;
}

.html {
  width: 90%;
  animation: html 2s ease-in;
}

.css {
  width: 80%;
  animation: css 2s ease-in;
}

.sass {
  width: 70%;
  animation: sass 2s ease-in;
}

.jquery {
  width: 60%;
  animation: jquery 2s ease-in;
}

.javascript {
  width: 60%;
  animation: javascript 2s ease-in;
}

.responsive-design {
  width: 90%;
  animation: responsive 2s ease-in;
}

.git {
  width: 70%;
  animation: git 2s ease-in;
}

@keyframes html {
  0% {
    width: 0%;
  }
  100% {
    width: 90%;
  }
}

@keyframes css {
  0% {
    width: 0%;
  }
  100% {
    width: 70%;
  }
}

@keyframes sass {
  0% {
    width: 0%;
  }
  100% {
    width: 60%;
  }
}

@keyframes jquery {
  0% {
    width: 0%;
  }
  100% {
    width: 60%;
  }
}

@keyframes javascript {
  0% {
    width: 0%;
  }
  100% {
    width: 60%;
  }
}

@keyframes responsive {
  0% {
    width: 0%;
  }
  100% {
    width: 90%;
  }
}

@keyframes git {
  0% {
    width: 0%;
  }
  100% {
    width: 60%;
  }
}

/* work projects */
#work {
  padding: 1rem 2rem;
  /* background: linear-gradient(45deg, var(--white-color), var(--bg-color)); */
  margin: 0 auto;
}

.projects {
  display: grid;
  grid-template-columns: 1fr;
  gap: 1.8rem;
  justify-content: center;
  margin: 2rem 0;
}

.projects img {
  border: 3px var(--dark-color) solid;
  transition: brightness, scale, 0.3s ease-in-out;
  margin-bottom: 0.5rem;
}

.projects img:hover {
  transform: scale(0.99);
  filter: brightness(85%);
}

/* Cards */
.card-wrapper {
  perspective: 600px;
  /* added later */
  -webkit-perspective: 600px;
  -o-perspective: 600px;
  -moz-perspective: 600px;
  /*  */
  width: 321px;
  height: 230px;
  margin: 1rem auto;
}

.card {
  position: relative;
  cursor: pointer;
  width: 100%;
  height: 100%;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
  transition: transform 1.5s ease;
  /* added later */
  -webkit-transition: -webkit-transform 1.5s ease;
  -o-transition: -o-transform 1.5s ease;
  -moz-transition: -moz-transform 1.5s ease;
  /*  */
  transform-style: preserve-3d;
  /* added later */
  -webkit-transform-style: preserve-3d;
  -o-transform-style: preserve-3d;
  -moz-transform-style: preserve-3d;
  /*  */
}

.card.is-flipped {
  transform: rotateY(180deg);
  /* added later */
  -ms-transform: rotateY(180deg);
  -moz-transform: rotateY(180deg);
  -webkit-transform: rotateY(180deg);
  -o-transform: rotateY(180deg);
  /*  */
}

.front {
  position: absolute;
  height: 100%;
  width: 100%;
  backface-visibility: hidden;
  /* added later */
  -moz-backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  -o-backface-visibility: hidden;
  /*  */
}

.back {
  position: absolute;
  height: 100%;
  width: 100%;
  padding: 0.5rem;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
  backface-visibility: hidden;
  /* rotating the back face of the card */
  transform: rotateY(180deg);
  -ms-transform: rotateY(180deg); /* IE 9 */
  -webkit-transform: rotateY(180deg); /* Safari */
  /* background: linear-gradient(
    45deg,
    var(--light-gray-color),
    var(--white-color)
  ); */
  background: linear-gradient(to top, lightblue, var(--blue-color));
}

.back h3 {
  margin-bottom: auto;
}

.back p {
  font-size: 0.8rem;
  font-weight: 400;
  justify-self: center;
  padding: 0.5rem;
  margin-bottom: 0.5rem;
}

.back h3,
.back p {
  color: var(--white-color);
}
/* Footer */
#main-footer .container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#main-footer {
  padding: 1rem 0;
  align-items: center;
  background: linear-gradient(to right, var(--dark-color), var(--bg-color));
  color: var(--white-color);
}

.footer-nav {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 1rem 0;
}

.footer-nav img {
  width: 2rem;
  transition: scale, opacity, 0.3s ease-in-out;
  margin-left: 1.5rem;
}

.footer-nav img:hover,
.footer-nav img:active {
  transform: scale(1.2);
  opacity: 0.7;
}

/* Arrow */

.arrow {
  border: solid var(--white-color);
  border-width: 0 3px 3px 0;
  display: inline-block;
  padding: 0.5rem;
  margin-top: 1.5rem;
}
.up {
  transform: rotate(-135deg);
  -webkit-transform: rotate(-135deg);
  transition: 0.4s border-color ease-in-out;
}

.up:hover,
.up:focus {
  border-color: var(--bright-color);
}

